--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mapbox/rehype-prism": "^0.8.0",
     "dayjs": "^1.11.13",
     "gray-matter": "^4.0.3",
-    "next": "^12.0.10",
+    "markdown-it": "^14.1.0",
+    "next": "^12.3.7",
     "next-seo": "^5.1.0",
+    "node": "^23.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rehype-stringify": "^9.0.3",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.10",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^17.0.15",
     "@types/react": "^17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
